--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("https://th.bing.com/th/id/R.e21cd6b865d33385c98a463b27bbe3f2?rik=ZVsHAUO5T9byFA&pid=ImgRaw&r=0");
+  background-image: url("https://images.hdqwalls.com/download/yellow-porsche-911-gt3-rs-5r-3840x2160.jpg");
+  background-size: cover;
 }
+
+
+
+/* https://images.hdqwalls.com/download/yellow-porsche-911-gt3-rs-5r-3840x2160.jpg
+https://images.hdqwalls.com/download/lamborghini-revuelto-opera-unica-2024-xx-3840x2160.jpg */
