--- a/src/components/ui/btn_text/button_text.module.scss
+++ b/src/components/ui/btn_text/button_text.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 5vh;
 
-    background-color: white;
+    background-color: rgb(253, 215, 2);
     border-radius: 0.2vw;
     border: none;
 
