--- a/src/components/container/login_btns/login_btns.module.scss
+++ b/src/components/container/login_btns/login_btns.module.scss
@@ -23,7 +23,7 @@
             width: 30%;
             text-align: center;
             font-size: 0.7vw;
-            border-bottom: 1px solid white;
+            border-bottom: 1px solid rgb(0, 0, 0);
             margin: 1.5vw 0 1vw;
         }
     }
