--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -3,7 +3,7 @@
     width: 16vw;
     height: 2vw;
     
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgb(0, 0, 0);
     display: flex;
     align-items: center;
 
