--- a/src/components/ui/text_navigation/text_navigation.module.scss
+++ b/src/components/ui/text_navigation/text_navigation.module.scss
@@ -2,7 +2,7 @@
     background-color: transparent;
     border: none;
     
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 0.8vw;
 
     cursor: pointer;
