--- a/src/pages/home_page/home.module.scss
+++ b/src/pages/home_page/home.module.scss
@@ -15,7 +15,7 @@
     left: 0;
     right: 0;
     margin: 5px;
-    background-color: #e32222;
+    background-color: #000000;
     border-radius: 8px;
     padding: 10px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
