--- a/src/pages/login_page/login_page.module.scss
+++ b/src/pages/login_page/login_page.module.scss
@@ -13,14 +13,14 @@
     border-radius: 1vw;
     box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
 
-    color: white;
+    color: rgb(253, 215, 2);
 
     .Blur {
         position: absolute;
         height: 70vh;
         width: 20vw;
         border-radius: 1vw;
-        background-color: #33333360;
+        background-color: #00000060;
         backdrop-filter: blur(5px);
         z-index: -1;
     }
