--- a/src/pages/form_card/form_card_page.module.scss
+++ b/src/pages/form_card/form_card_page.module.scss
@@ -9,9 +9,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-
+    backdrop-filter: blur(5px);
+    background-color: #00000060;
     border-radius: 1vw;
-    box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
+    box-shadow: 8px 8px 24px 0px rgb(253, 215, 2);
 
     color: white;
 
@@ -20,7 +21,7 @@
         height: 50vh;
         width: 30vw;
         border-radius: 1vw;
-        background-color: #33333360;
+        background-color: #00000060;
         backdrop-filter: blur(5px);
         z-index: -1;
     }
@@ -31,6 +32,7 @@
         margin: 0;
         text-align: start;
         color: rgb(253, 215, 2);
+        
     }
 
     .Form{
