--- a/src/pages/home_page/home.module.scss
+++ b/src/pages/home_page/home.module.scss
@@ -65,7 +65,7 @@
             border-radius: 50%;
             border: none;
 
-            color: white;
+            color: rgb(0, 0, 0);
             cursor: pointer;
             transition: all 0.2s ease-in-out;
 
@@ -75,7 +75,7 @@
         }
 
         .BinButton {
-            background-color: rgb(0, 0, 0);
+            background-color: rgb(253, 215, 2);
         }
 
         .PencilButton {
