--- a/src/pages/home_page/home.module.scss
+++ b/src/pages/home_page/home.module.scss
@@ -10,26 +10,30 @@
     width: 90%;
     height: 90%;
     position: relative;
-
     margin: 1vw;
-
     display: grid;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-
     background-color: rgb(0, 0, 0);
     border-radius: 0.8vw;
     box-shadow:
         0.5vw 0.5vw 1vw rgb(253, 215, 2),
         /* sombra principal */
-        inset 0.2vw 0.2vw 0.5vw rgba(255, 255, 255, 0.05),
+        inset 0.2vw 0.2vw 0.5vw rgba(0, 0, 0, 0.05),
         /* brilho interno */
         inset -0.2vw -0.2vw 0.5vw rgba(0, 0, 0, 0.2);
     /* sombra interna */
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px rgba(253, 215, 2, 0.7);
+    z-index: 2;
+    animation: glowPulse 1s infinite;
 
     margin: 1vw;
-
+  }
     img {
         width: 100%;
         height: auto;
@@ -100,3 +104,12 @@
 
     }
 }
+@keyframes glowPulse {
+  0%, 100% {
+    box-shadow: 0 0 10px rgba(253, 215, 2);
+  }
+  50% {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  }
+}
+
