--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,1 +1,7 @@
-$primary-color: #aaaa;
+$primary-color: #aaaaaaaa;
+
+$light-bg: #ffffff;
+$light-text: #333333;
+
+$dark-bg: #333333;
+$dark-text: #ffffff;
