--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("https://images.hdqwalls.com/download/yellow-porsche-911-gt3-rs-5r-3840x2160.jpg");
+  background-image: var(--bg-img);
   background-size: cover;
 }
 
