--- a/src/pages/login_page/login_page.module.scss
+++ b/src/pages/login_page/login_page.module.scss
@@ -13,7 +13,7 @@
     border-radius: 1vw;
     box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
 
-    color: rgb(253, 215, 2);
+    color: var(--bg-color);
     
 
     .Blur {
