--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -1,8 +1,21 @@
+:root[data-theme = 'dark']{
+  --bg-color: #333333;
+  --text-color: #ffffff;
+  --bg-img:url("https://images.hdqwalls.com/wallpapers/novitec-rosso-ferrari.jpg");
+}
+:root[data-theme = 'light']{
+  --bg-color: #ffffff;
+  --text-color: #333333;
+  --bg-img: url("https://images.hdqwalls.com/download/yellow-porsche-911-gt3-rs-5r-3840x2160.jpg");
+}
+
+
 body{
   margin: 0;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 button{
