--- a/src/components/ui/btn_enterprises/button_icon.module.scss
+++ b/src/components/ui/btn_enterprises/button_icon.module.scss
@@ -2,11 +2,11 @@
     width: 3vw;
     height: 3vw;
 
-    background-color: rgb(253, 215, 2);
+    background-color: black;
     border-radius: 50%;
     border: none;
     
-    color: black;
+    color: var(--bg-color);
     font-size: 1.5vw;
 
     cursor: pointer;
