--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -14,13 +14,13 @@
         background: transparent;
         border: none;
         outline: none;
-        color: white;
+        color: var(--bg-color);
         font-size: 1rem;
         padding: 0 1rem;
     }
 
     .iconLeft, .iconRight {
-        color: white;
+        color: var(--bg-color);;
         font-size: 1.25rem;
         padding-right: 0.5rem;
     }
