--- a/src/pages/home_page/home.module.scss
+++ b/src/pages/home_page/home.module.scss
@@ -45,7 +45,7 @@
         width: 100%;
         padding: 0 0 0 1.5vw;
         font-size: 1vw;
-        color: rgb(255, 255, 255);
+        color: var(--bg-color);
         margin: 0;
     }
 
@@ -53,7 +53,7 @@
         font-size: 1.5vw;
         width: 100%;
         padding: 0 0 0 1.5vw;
-        color: rgb(253, 215, 2);
+        color: var(--bg-color);
         margin: 0;
     }
 
@@ -82,6 +82,7 @@
 
         .PencilButton {
             background-color: rgb(253, 215, 2);
+            
 
         }
     }
