--- a/src/pages/login_page/login_page.module.scss
+++ b/src/pages/login_page/login_page.module.scss
@@ -9,11 +9,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    
+    
 
     border-radius: 1vw;
     box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
 
-    color: var(--bg-color);
+    // color: var(--bg-color);
     
 
     .Blur {
