--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -14,7 +14,7 @@
         background: transparent;
         border: none;
         outline: none;
-        color: var(--bg-color);
+        color: white;
         font-size: 1rem;
         padding: 0 1rem;
     }
