--- a/src/pages/login_page/login_page.module.scss
+++ b/src/pages/login_page/login_page.module.scss
@@ -1,49 +1,49 @@
-.LoginPage {
-    height: 70vh;
-    width: 20vw;
+// .LoginPage {
+//     height: 70vh;
+//     width: 20vw;
 
-    position: relative;
-    z-index: 1;
+//     position: relative;
+//     z-index: 1;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: space-around;
     
     
 
-    border-radius: 1vw;
-    box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
+//     border-radius: 1vw;
+//     box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
 
-    // color: var(--bg-color);
+//     // color: var(--bg-color);
     
 
-    .Blur {
-        position: absolute;
-        height: 70vh;
-        width: 20vw;
-        border-radius: 1vw;
-        background-color: #00000060;
-        backdrop-filter: blur(5px);
-        z-index: -1;
-    }
+//     .Blur {
+//         position: absolute;
+//         height: 70vh;
+//         width: 20vw;
+//         border-radius: 1vw;
+//         background-color: #00000060;
+//         backdrop-filter: blur(5px);
+//         z-index: -1;
+//     }
 
-    .Title {
-        width: 80%;
-        text-align: start;
+//     .Title {
+//         width: 80%;
+//         text-align: start;
 
-        h1 {
-            font-size: 2.5vw;
-        }
+//         h1 {
+//             font-size: 2.5vw;
+//         }
 
-        p {
-            font-size: 0.8vw;
-        }
+//         p {
+//             font-size: 0.8vw;
+//         }
 
-    }
+//     }
 
-    .NavigationCreateAcount {
-        display: flex;
-        font-size: 1.2vw;
-    }
-}
+//     .NavigationCreateAcount {
+//         display: flex;
+//         font-size: 1.2vw;
+//     }
+// }
